tests/negative/generics/tuple_bracket_index.orng
// tuple_bracket_index.orng:13:34: error: the type `(Int, Int)` does not contain the member `index`
//             retval.>put(pairs[i][0], pairs[i][1])
//                                 ^
// 
struct Map[K, V] { dummy: Int }

impl[K, V] for Map[K, V] {
    fn put(&mut self, key: K, value: V) { _ = key; _ = value; }

    fn from_slice(pairs: [](K, V)) -> Int {
        let mut retval: Map[K, V] = Map[K, V](0)
        while let mut i = 0; i < pairs.length; i += 1 {
            retval.>put(pairs[i][0], pairs[i][1])
        }
        pairs.length
    }
}

fn main() -> Int {
    Map[Int, Int]::from_slice(&[(1, 2), (3, 4)])
}
